fixed content scrolling on mobile when sidebar is out

--- a/client/private/scss/layout/_main.scss
+++ b/client/private/scss/layout/_main.scss
@@ -95,3 +95,9 @@ html, body {font-size: 62.5%; height: 100%; min-height: 100%; }
     }
   }
 }
+
+.prevent-scrolling {
+  max-width:100% !important;
+  max-height:100% !important;
+  overflow: hidden !important;
+}
